<resources>
    <string name="app_name">CombatingTheFlu</string>
    <string name="welcome">Welcome!</string>
    <string name="msgInitial">The flu arrived and came with great force, so this game will help us to know how prevent it.</string>

    <string name="textName">Name:</string>
    <string name="nameError">Please put your name!</string>
    <string name="textEmail">Email:</string>

    <string name="btnEnter">Enter</string>

    <string name="msgInputData">Enter your data to begin.</string>

    <string name="btnBack">Back</string>
    <string name="btnAnswer">Answer</string>
    <string name="btnNext">Next</string>
    <string name="rightQuestion">Right</string>
    <string name="wrongQuestion">Wrong</string>
    <string name="informationQ1">Choose Right or Wrong for the situation shown below.</string>
    <string name="radioButtonError">You must choose one option.</string>


    <string name="question1">You are with the flu and get in a closed enviroment with crowd people</string>
    <string name="answerRightQ1">Right Answer! \n If you are with the flu, you should avoid closed enviroment, to dont to spread the flu</string>
    <string name="answerWrongQ1">Wrong Answer. \n If you are with the flu, you should avoid closed enviroment, to dont to spread the flu</string>


    <string name="question2">If you will sneezing you should to do like the image above?</string>
    <string name="answerRightQ2">Right Answer! \n When you sneeze you should use a scarf or turn and sneezing on arm</string>
    <string name="answerWrongQ2">Wrong Answer. \n When you sneeze you should use a scarf or turn and sneezing on arm</string>

    <string name="question3">Shouldnt you pass your hands in eyes, mouth and nose without clean it</string>
    <string name="answerRightQ3">Right Answer! \n You should pass the hands in eyes, mouth and nose after clean it, it can be contaminated.</string>
    <string name="answerWrongQ3">Wrong Answer. \n You should pass the hands in eyes, mouth and nose after clean it, it can be contaminated.</string>

    <string name="question4">Should you clean your hands with water and soap or alcohol gel? </string>
    <string name="answerRightQ4">Right Answer! \n You should clean hands with water and soap or alcohol gel to prevent the flu.</string>
    <string name="answerWrongQ4">Wrong Answer. \n You should clean hands with water and soap or alcohol gel to prevent the flu.</string>

    <string name="question5">Should you borrow your personal use itens for everyone? </string>
    <string name="answerRightQ5">Right Answer! \n You shouldnt share your personal use itens.</string>
    <string name="answerWrongQ5">Wrong Answer. \n You shouldnt share your personal use itens.</string>

    <string name="congratFinal">Congratulations, </string>
    <string name="informationFinal">Now you know how to prevent yourself of the flu. \n</string>
    <string name="resultFinal">Score \n </string>
    <string name="btnFinal">Send by email</string>

    <string name="messageEmail">Certificate \n Certify that NOME know how to prevent the flu.</string>
    <string name="messageEmailStudy">You have a low score, do it again! \n</string>
</resources>
