<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
    android:id="@+id/inputNameFinal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="15dp"
    style="@style/textStyle"/>

    <TextView
        android:id="@+id/inputFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informationFinal"
        style="@style/textStyle"/>

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/inputResultFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultFinal"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:padding="10dp"/>

    <Button
        android:layout_marginTop="55dp"
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnFinal"
        android:layout_gravity="center"
        android:onClick="sendEmail"/>

</LinearLayout>