<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.combatingtheflu.Question1Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informationQ1"
        style="@style/textStyle"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/question1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question1"
        style="@style/textStyle"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rightQuestion"
                android:id="@+id/radioButtonQ1True"
                android:paddingRight="30dp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrongQuestion"
                android:id="@+id/radioButtonQ1False"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewAnswerQ1"
        style="@style/textStyle"
        android:visibility="invisible"/>
<!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewWrongAnswerQ1"
        android:text="@string/answerWrongtQ1"
        style="@style/textStyle"
        android:textColor="#D32F2F"
        android:visibility="visible"/>
        -->


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <!--
        <Button
            android:id="@+id/btnAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAnswer"

            android:layout_gravity="center"/>
-->

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            android:layout_gravity="center"/>
    </LinearLayout>

</LinearLayout>
